--- a/css/styles.css
+++ b/css/styles.css
@@ -68,11 +68,6 @@ html {
     font-size: 50%;
   }
 }
-@media (max-width: 37.5em) {
-  html {
-    font-size: 30%;
-  }
-}
 @media (min-width: 112.5em) {
   html {
     font-size: 75%;
@@ -81,6 +76,12 @@ html {
 
 body {
   box-sizing: border-box;
+  padding: 3rem;
+}
+@media (max-width: 56.25em) {
+  body {
+    padding: 0;
+  }
 }
 
 body {
@@ -103,12 +104,23 @@ body .heading-primary .heading-primary--main {
   letter-spacing: 3.5rem;
   animation: moveInLeft 1s ease-out;
 }
+@media (max-width: 37.5em) {
+  body .heading-primary .heading-primary--main {
+    font-size: 5rem;
+    letter-spacing: 1rem;
+  }
+}
 body .heading-primary .heading-primary--sub {
   display: block;
   font-size: 2rem;
   font-weight: 700;
-  letter-spacing: 17.4px;
+  letter-spacing: 1.75rem;
   animation: moveInRight 1s ease-out;
+}
+@media (max-width: 37.5em) {
+  body .heading-primary .heading-primary--sub {
+    letter-spacing: 0.5rem;
+  }
 }
 body .heading-secondary {
   font-size: 3.5rem;
@@ -120,6 +132,16 @@ body .heading-secondary {
   color: transparent;
   letter-spacing: 0.2rem;
   transition: all 0.2s;
+}
+@media (max-width: 56.25em) {
+  body .heading-secondary {
+    font-size: 3rem;
+  }
+}
+@media (max-width: 37.5em) {
+  body .heading-secondary {
+    font-size: 2.5rem;
+  }
 }
 body .heading-secondary:hover {
   transform: skewY(2deg) skewX(15deg) scale(1.1);
@@ -148,9 +170,19 @@ body .paragraph:not(:last-child) {
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important;
 }
+@media (max-width: 56.25em) {
+  .u-margin-bottom-medium {
+    margin-bottom: 3rem !important;
+  }
+}
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important;
+}
+@media (max-width: 56.25em) {
+  .u-margin-bottom-big {
+    margin-bottom: 5rem !important;
+  }
 }
 
 .u-margin-top-big {
@@ -370,6 +402,40 @@ body .paragraph:not(:last-child) {
   font-weight: 100;
   margin-bottom: 8rem;
 }
+@media (max-width: 56.25em) {
+  .card {
+    height: auto;
+    border-radius: 3px;
+    background-color: #fff;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  }
+  .card_side {
+    height: auto;
+    position: relative;
+    box-shadow: none;
+  }
+  .card_side-back {
+    transform: rotateY(0);
+    clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+  }
+  .card:hover .card_side-front {
+    transform: rotateY(0);
+  }
+  .card_cta {
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: translate(0);
+    width: 100%;
+    padding: 7rem 4rem 4rem 4rem;
+  }
+  .card_prince-box {
+    margin-bottom: 3rem;
+  }
+  .card_prince-vaule {
+    font-size: 6rem;
+  }
+}
 
 .composition {
   position: relative;
@@ -383,17 +449,45 @@ body .paragraph:not(:last-child) {
   transition: all 0.2s;
   outline-offset: 2rem;
 }
+@media (max-width: 56.25em) {
+  .composition_photo {
+    float: left;
+    position: relative;
+    width: 33.3333333%;
+    box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2);
+  }
+}
 .composition_photo--p1 {
   left: 0;
   top: -2rem;
+}
+@media (max-width: 56.25em) {
+  .composition_photo--p1 {
+    top: 0;
+    transform: scale(1.2);
+  }
 }
 .composition_photo--p2 {
   right: 0;
   top: 2rem;
 }
+@media (max-width: 56.25em) {
+  .composition_photo--p2 {
+    top: -1rem;
+    transform: scale(1.3);
+    z-index: 100;
+  }
+}
 .composition_photo--p3 {
   left: 20%;
   top: 10rem;
+}
+@media (max-width: 56.25em) {
+  .composition_photo--p3 {
+    left: 0;
+    top: 1rem;
+    transform: scale(1.1);
+  }
 }
 .composition_photo:hover {
   outline: 1.5rem solid #55c57a;
@@ -414,6 +508,11 @@ body .paragraph:not(:last-child) {
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform 0.3s;
 }
+@media (max-width: 56.25em) {
+  .feature-box {
+    padding: 2rem;
+  }
+}
 .feature-box_icon {
   font-size: 6rem;
   margin-bottom: 0.5rem;
@@ -421,6 +520,11 @@ body .paragraph:not(:last-child) {
   background-image: linear-gradient(to right, #7ed56f, #28b485);
   -webkit-background-clip: text;
   color: transparent;
+}
+@media (max-width: 56.25em) {
+  .feature-box_icon {
+    margin-bottom: 0;
+  }
 }
 .feature-box:hover {
   transform: translateY(-1.5rem) scale(1.03);
@@ -645,6 +749,17 @@ body .paragraph:not(:last-child) {
 .row:not(:last-child) {
   margin-bottom: 8rem;
 }
+@media (max-width: 56.25em) {
+  .row:not(:last-child) {
+    margin-bottom: 6rem;
+  }
+}
+@media (max-width: 56.25em) {
+  .row {
+    max-width: 50rem;
+    padding: 0 3rem;
+  }
+}
 .row::after {
   content: "";
   display: table;
@@ -655,6 +770,17 @@ body .paragraph:not(:last-child) {
 }
 .row [class^=col-]:not(:last-child) {
   margin-right: 6rem;
+}
+@media (max-width: 56.25em) {
+  .row [class^=col-]:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 6rem;
+  }
+}
+@media (max-width: 56.25em) {
+  .row [class^=col-] {
+    width: 100% !important;
+  }
 }
 .row .col-1-of-2 {
   width: calc((100% - 6rem) / 2);
@@ -684,6 +810,12 @@ body .paragraph:not(:last-child) {
   -web-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
+@media (max-width: 37.5em) {
+  .header {
+    -web-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+  }
+}
 .header .header_logo-box {
   position: absolute;
   top: 4rem;
@@ -706,9 +838,19 @@ body .paragraph:not(:last-child) {
   font-size: 1.4rem;
   color: #f7f7f7;
 }
+@media (max-width: 56.25em) {
+  .footer {
+    padding: 8rrem 0;
+  }
+}
 .footer_logo-box {
   text-align: center;
   margin-bottom: 8rem;
+}
+@media (max-width: 56.25em) {
+  .footer_logo-box {
+    margin-bottom: 6rem;
+  }
 }
 .footer_logo {
   width: 15rem;
@@ -718,6 +860,12 @@ body .paragraph:not(:last-child) {
   border-top: 1px solid #777;
   padding: 2rem;
   display: inline-block;
+}
+@media (max-width: 56.25em) {
+  .footer_navigation {
+    width: 100%;
+    text-align: center;
+  }
 }
 .footer_list {
   list-style: none;
@@ -747,6 +895,12 @@ body .paragraph:not(:last-child) {
   width: 80%;
   float: right;
 }
+@media (max-width: 56.25em) {
+  .footer_copyright {
+    width: 100%;
+    float: none;
+  }
+}
 
 .navigation_checkbox {
   display: none;
@@ -764,6 +918,12 @@ body .paragraph:not(:last-child) {
   text-align: center;
   cursor: pointer;
 }
+@media (max-width: 56.25em) {
+  .navigation_button {
+    top: 5rem;
+    right: 5rem;
+  }
+}
 .navigation_background {
   height: 6rem;
   width: 6rem;
@@ -774,6 +934,12 @@ body .paragraph:not(:last-child) {
   background-image: radial-gradient(#7ed56f, #28b485);
   z-index: 1000;
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+}
+@media (max-width: 56.25em) {
+  .navigation_background {
+    top: 5.5rem;
+    right: 5.5rem;
+  }
 }
 .navigation_nav {
   height: 100vh;
@@ -880,21 +1046,41 @@ body .paragraph:not(:last-child) {
 .section-feature > * {
   transform: skewY(7deg);
 }
+@media (max-width: 56.25em) {
+  .section-feature {
+    padding: 10rem 0;
+  }
+}
 
 .section-tours {
   background-color: #f7f7f7;
   padding: 25rem 0 15rem 0;
   margin-top: -10rem;
 }
+@media (max-width: 56.25em) {
+  .section-tours {
+    padding: 20rem 0 10rem 0;
+  }
+}
 
 .section-stories {
   position: relative;
   padding: 15rem 0;
 }
+@media (max-width: 56.25em) {
+  .section-stories {
+    padding: 10rem 0;
+  }
+}
 
 .section-book {
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
+}
+@media (max-width: 56.25em) {
+  .section-book {
+    padding: 10rem 0;
+  }
 }
 
 .book {
