--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -17,10 +17,6 @@ html {
         font-size: 50%;
     }
 
-    @include respond(phone) {
-        font-size: 30%;
-    }
-
     @include respond(big-desktop) {
         font-size: 75%;
     }
@@ -28,4 +24,9 @@ html {
 
 body {    
     box-sizing: border-box;
+    padding: 3rem;
+
+    @include respond(tab-port) {
+        padding: 0;
+    }
 }
