--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -151,4 +151,45 @@
         font-weight: 100;
         margin-bottom: 8rem;
     }
+
+
+    @include respond(tab-port) {
+        height: auto;
+        border-radius: 3px;
+        background-color: $color-white;
+        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+    
+        &_side {
+            height: auto;
+            position: relative;
+            box-shadow: none;
+    
+            &-back {
+                transform: rotateY(0);
+                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+            }
+        }
+    
+        &:hover &_side-front {
+            transform: rotateY(0);
+        }
+
+        // BACK SIDE STYLING
+        &_cta {
+            position: relative;
+            top: 0;
+            left: 0;
+            transform: translate(0);
+            width: 100%;
+            padding: 7rem 4rem 4rem 4rem;
+        }
+        
+        &_prince-box {
+            margin-bottom: 3rem;
+        }
+    
+        &_prince-vaule {
+            font-size: 6rem;
+        }
+    }
 }
