--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -16,6 +16,11 @@
         box-shadow: 0 1rem 3rem rgba($color-black, .1);
         text-align: center;
         cursor: pointer;
+
+        @include respond(tab-port) {
+            top: 5rem;
+            right: 5rem;
+        }
     }
 
     &_background {
@@ -29,7 +34,10 @@
         z-index: 1000;
         transition: transform .8s cubic-bezier(0.86, 0, 0.07,1);
 
-        // transform: scale(80);
+        @include respond(tab-port) {
+            top: 5.5rem;
+            right: 5.5rem;
+        }
     }
 
     &_nav {
